# nrf54l15-ble-cansim

./: .gitignore  CMakeLists.txt  README.md  prj.conf
boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
host/: central.py  requirements.txt
src/: main.cpp
src/ble/: TelemetryService.cpp  TelemetryService.hpp
src/can/: CanGatewayService.cpp  CanGatewayService.hpp  CanSimulator.cpp  CanSimulator.hpp
src/led/: LedIndicator.cpp  LedIndicator.hpp
src/sensor/: ImuSensor.cpp  ImuSensor.hpp
